change return type to PriceDto and filter by date